--- a/index.html
+++ b/index.html
@@ -244,15 +244,14 @@
 	</main>
     <footer>
         <p>&#169; 2016 Joe UX Designer</p>
-    </footer>
-	
+    </footer
+    	
     	<!--<script src='scripts/script.min.js'></script> -->
     	<!--  OR NOT min for dev   -->
 		<script src='scripts/script.js'></script>
 
 		<!-- dev only and only if runing on local server-->
 		<!-- grunt watch live reloads  -->
-		<!--<script src="//localhost:35729/livereload.js"></script>-->
-    
+		<!--<script src="//localhost:35729/livereload.js"></script>-->   
 </body>
 </html>
