--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
     <footer>
         <p>&#169; 2016 Joe UX Designer</p>
     </footer
-    	
-    	<!--<script src='scripts/script.min.js'></script> -->
+
+    	<!--<script src='scripts/script.min.js'></script>
     	<!--  OR NOT min for dev   -->
 		<script src='scripts/script.js'></script>
 
